.opam/default/.opam-switch/sources/sail_ocaml_backend.0.20.1/test/typecheck/fail/unscope_val.sail
$option --dallow-internal

$project# A {}

default Order dec

$include <prelude.sail>

$start_module# A

val foo : unit -> unit

$end_module# A

function foo() = ()
